--- a/css/main.scss
+++ b/css/main.scss
@@ -48,13 +48,12 @@ menu {
     background-color: $dark_blue;
     border: 1px $blackish solid;
     border-bottom: none;
+    clear: left;
     color: $whiteish;
     float: left;
     font-family: sans-serif;
     font-size: .9em;
     font-weight: bold;
-    height: 100%;
-    left: 0;
     list-style: none;
     margin: 10px 10px 0 0;
     padding: 0;
@@ -208,19 +207,13 @@ footer a:hover {
 /* NOTE: The default layout is optimized for iPad landscape, so it's not declared here. */
 /* NOTE: The min-width to max-width is for the sake of a fluidly resized window on a laptop or desktop browser. */
 @media only screen and (min-width: 753px) and (max-width: 1008px) {  /* Scrollbar makes it 1008 instead of 1023 */
-    body {
-        width: 720px;
-    }
+    
 }
 /* iPhone Landscape View */
 @media only screen and (min-width: 465px) and (max-width: 752px) {
-    body {
-        width: 480px;
-    }
+    
 }
 /* iPhone Portrait View */
 @media only screen and (min-width: 320px) and (max-width: 464px) {
-    body {
-        width: 320px;
-    }
+    
 }
