Links bold and space after projects

--- a/css/main.scss
+++ b/css/main.scss
@@ -163,6 +163,9 @@ article ul li {
     list-style-type: none;
     padding-left: 20px;
 }
+article a {
+    font-weight: bold;
+}
 article a:hover {
     text-decoration: underline;
 }
@@ -177,6 +180,9 @@ article a:hover {
 }
 .content_image_full {
     width: 100%;
+}
+.project {
+    overflow: hidden;
 }
 a.social-media {
     background:transparent url(../images/social-media-icons.png) 0 0 no-repeat;
